refactor: Refactoring the codebase, creating new Utils